--- a/hollysome/Views/Main/AlarmCell.xib
+++ b/hollysome/Views/Main/AlarmCell.xib
@@ -10,30 +10,27 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="AlarmCell" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="AlarmCell" rowHeight="77" id="Udp-CO-cnI" customClass="AlarmCell" customModule="hollysome" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="77"/>
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="AlarmCell" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="AlarmCell" rowHeight="97" id="Udp-CO-cnI" customClass="AlarmCell" customModule="hollysome" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="414" height="97"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Udp-CO-cnI" id="5ZA-mC-jKA">
-                <rect key="frame" x="0.0" y="0.0" width="414" height="77"/>
+                <rect key="frame" x="0.0" y="0.0" width="414" height="97"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="알림 내용" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xd5-CO-zbD">
-                        <rect key="frame" x="16" y="20" width="363" height="21"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="21" id="GcM-BN-5OV"/>
-                        </constraints>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="알림 내용" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xd5-CO-zbD">
+                        <rect key="frame" x="16" y="20" width="363" height="17"/>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <color key="textColor" name="3A3A3C"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="알림 날짜" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k9B-q9-3Hu">
-                        <rect key="frame" x="16" y="46" width="378" height="11"/>
+                        <rect key="frame" x="16" y="42" width="378" height="14.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <color key="textColor" name="999999"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6Di-bJ-zDI">
-                        <rect key="frame" x="368" y="11.5" width="46" height="54"/>
+                        <rect key="frame" x="368" y="21.5" width="46" height="54"/>
                         <inset key="contentEdgeInsets" minX="16" minY="16" maxX="16" maxY="16"/>
                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                         <state key="normal" image="close"/>
@@ -45,7 +42,7 @@
                     <constraint firstItem="Xd5-CO-zbD" firstAttribute="top" secondItem="5ZA-mC-jKA" secondAttribute="top" constant="20" id="AIc-p6-aDA"/>
                     <constraint firstAttribute="trailing" secondItem="6Di-bJ-zDI" secondAttribute="trailing" id="F0q-sV-Ss8"/>
                     <constraint firstAttribute="trailing" secondItem="Xd5-CO-zbD" secondAttribute="trailing" constant="35" id="IWD-mN-mEb"/>
-                    <constraint firstAttribute="bottom" secondItem="k9B-q9-3Hu" secondAttribute="bottom" constant="20" id="QYZ-5f-dJS"/>
+                    <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="k9B-q9-3Hu" secondAttribute="bottom" constant="20" id="QYZ-5f-dJS"/>
                     <constraint firstItem="k9B-q9-3Hu" firstAttribute="top" secondItem="Xd5-CO-zbD" secondAttribute="bottom" constant="5" id="aEa-LP-vZI"/>
                     <constraint firstItem="k9B-q9-3Hu" firstAttribute="leading" secondItem="5ZA-mC-jKA" secondAttribute="leading" constant="16" id="br6-TD-MGR"/>
                     <constraint firstAttribute="trailing" secondItem="k9B-q9-3Hu" secondAttribute="trailing" constant="20" id="yX3-Xr-INn"/>
@@ -54,8 +51,9 @@
             <connections>
                 <outlet property="contentsLabel" destination="Xd5-CO-zbD" id="Km1-Tb-STY"/>
                 <outlet property="dateLabel" destination="k9B-q9-3Hu" id="uW7-fU-JVE"/>
+                <outlet property="deleteButton" destination="6Di-bJ-zDI" id="zHg-Kh-0cg"/>
             </connections>
-            <point key="canvasLocation" x="-52.173913043478265" y="98.772321428571431"/>
+            <point key="canvasLocation" x="-52.173913043478265" y="105.46875"/>
         </tableViewCell>
     </objects>
     <resources>
