--- a/hollysome/Views/Commons/FSDayCell.xib
+++ b/hollysome/Views/Commons/FSDayCell.xib
@@ -33,24 +33,37 @@
                             <constraint firstAttribute="width" constant="5" id="DMX-eh-6eY"/>
                         </constraints>
                     </view>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="today" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Gs-jk-kGQ">
+                        <rect key="frame" x="0.0" y="5" width="48" height="11"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="9"/>
+                        <color key="textColor" name="FF5F58"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <constraints>
+                    <constraint firstItem="9Gs-jk-kGQ" firstAttribute="leading" secondItem="Rts-tE-eSV" secondAttribute="leading" id="4bc-cp-7bp"/>
                     <constraint firstAttribute="bottom" secondItem="jwk-OM-5IT" secondAttribute="bottom" id="E01-DZ-vMK"/>
                     <constraint firstItem="BBE-cR-TLu" firstAttribute="centerX" secondItem="Rts-tE-eSV" secondAttribute="centerX" id="Ygx-Gd-Xph"/>
                     <constraint firstItem="jwk-OM-5IT" firstAttribute="top" secondItem="BBE-cR-TLu" secondAttribute="bottom" constant="3" id="bea-KE-w5W"/>
                     <constraint firstItem="BBE-cR-TLu" firstAttribute="top" secondItem="Rts-tE-eSV" secondAttribute="top" constant="3" id="gLN-TH-gW0"/>
+                    <constraint firstAttribute="trailing" secondItem="9Gs-jk-kGQ" secondAttribute="trailing" id="lOx-8S-Cop"/>
                     <constraint firstItem="jwk-OM-5IT" firstAttribute="centerX" secondItem="BBE-cR-TLu" secondAttribute="centerX" id="qy9-Qv-gYf"/>
+                    <constraint firstItem="9Gs-jk-kGQ" firstAttribute="top" secondItem="Rts-tE-eSV" secondAttribute="top" constant="5" id="rRI-59-3n0"/>
                 </constraints>
             </collectionViewCellContentView>
             <size key="customSize" width="48" height="120"/>
             <connections>
                 <outlet property="circleView" destination="BBE-cR-TLu" id="iLn-W9-IxL"/>
                 <outlet property="newView" destination="jwk-OM-5IT" id="ncw-1U-bHJ"/>
+                <outlet property="todayLabel" destination="9Gs-jk-kGQ" id="aBu-Nx-FUi"/>
             </connections>
             <point key="canvasLocation" x="86.956521739130437" y="-200.22321428571428"/>
         </collectionViewCell>
     </objects>
     <resources>
+        <namedColor name="FF5F58">
+            <color red="1" green="0.72500002384185791" blue="0.6589999794960022" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <namedColor name="accent">
             <color red="1" green="0.37299999594688416" blue="0.3449999988079071" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
