--- a/hollysome/Views/Home/ScheduleExpandCell.xib
+++ b/hollysome/Views/Home/ScheduleExpandCell.xib
@@ -84,7 +84,7 @@
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4Du-3x-zCe">
                                 <rect key="frame" x="276" y="19" width="69" height="31"/>
-                                <color key="backgroundColor" name="accent"/>
+                                <color key="backgroundColor" name="87B7FF"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="69" id="tCy-m9-HdH"/>
                                     <constraint firstAttribute="height" constant="31" id="xWG-Bc-qP8"/>
@@ -141,6 +141,9 @@
         <image name="check" width="16" height="16"/>
         <namedColor name="3A3A3C">
             <color red="0.22699999809265137" green="0.22699999809265137" blue="0.23499999940395355" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="87B7FF">
+            <color red="0.52899998426437378" green="0.71799999475479126" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="C8CCD5">
             <color red="0.7839999794960022" green="0.80000001192092896" blue="0.83499997854232788" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
