--- a/hollysome/Views/Schedule/AddScheduleCell.xib
+++ b/hollysome/Views/Schedule/AddScheduleCell.xib
@@ -20,7 +20,7 @@
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oQC-vD-GEK">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="1"/>
-                        <color key="backgroundColor" name="E4E6EB"/>
+                        <color key="backgroundColor" name="FFFFFF"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="1" id="QDN-js-RVf"/>
                         </constraints>
@@ -59,20 +59,12 @@
                         </collectionViewFlowLayout>
                         <cells/>
                     </collectionView>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6dG-z6-3YM">
-                        <rect key="frame" x="0.0" y="163" width="393" height="8"/>
-                        <color key="backgroundColor" name="FAFAFC"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="8" id="Bbv-kV-cr8"/>
-                        </constraints>
-                    </view>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="trailing" secondItem="6dG-z6-3YM" secondAttribute="trailing" id="2Qt-QB-Tae"/>
+                    <constraint firstAttribute="bottom" secondItem="yMn-A7-WFx" secondAttribute="bottom" constant="16" id="42R-ai-FHS"/>
                     <constraint firstAttribute="trailing" secondItem="wBS-v1-aLR" secondAttribute="trailing" id="Bp3-r5-t1T"/>
                     <constraint firstItem="wBS-v1-aLR" firstAttribute="centerY" secondItem="Fma-pA-mJQ" secondAttribute="centerY" id="Mjw-M2-fwc"/>
                     <constraint firstItem="wBS-v1-aLR" firstAttribute="top" secondItem="oQC-vD-GEK" secondAttribute="bottom" id="Mmg-yC-bZp"/>
-                    <constraint firstItem="6dG-z6-3YM" firstAttribute="top" secondItem="yMn-A7-WFx" secondAttribute="bottom" constant="24" id="QQm-6U-2S2"/>
                     <constraint firstItem="oQC-vD-GEK" firstAttribute="leading" secondItem="Sn9-bb-euK" secondAttribute="leading" id="Qf3-JK-V5P"/>
                     <constraint firstItem="Fma-pA-mJQ" firstAttribute="top" secondItem="oQC-vD-GEK" secondAttribute="bottom" constant="24" id="Sc3-oe-euP"/>
                     <constraint firstAttribute="trailing" secondItem="yMn-A7-WFx" secondAttribute="trailing" id="Y8s-2t-nCl"/>
@@ -80,8 +72,6 @@
                     <constraint firstItem="yMn-A7-WFx" firstAttribute="top" secondItem="Fma-pA-mJQ" secondAttribute="bottom" constant="8" id="enQ-e8-SGe"/>
                     <constraint firstItem="Fma-pA-mJQ" firstAttribute="leading" secondItem="Sn9-bb-euK" secondAttribute="leading" constant="16" id="f8d-4F-1Yp"/>
                     <constraint firstAttribute="trailing" secondItem="oQC-vD-GEK" secondAttribute="trailing" id="ico-tL-nuc"/>
-                    <constraint firstAttribute="bottom" secondItem="6dG-z6-3YM" secondAttribute="bottom" id="quj-c9-7AP"/>
-                    <constraint firstItem="6dG-z6-3YM" firstAttribute="leading" secondItem="Sn9-bb-euK" secondAttribute="leading" id="rPt-ZJ-AEZ"/>
                     <constraint firstItem="oQC-vD-GEK" firstAttribute="top" secondItem="Sn9-bb-euK" secondAttribute="top" id="zdY-OO-Vz2"/>
                 </constraints>
             </tableViewCellContentView>
@@ -95,11 +85,8 @@
     </objects>
     <resources>
         <image name="head_btn_close" width="15.666666984558105" height="15.666666984558105"/>
-        <namedColor name="E4E6EB">
-            <color red="0.89399999380111694" green="0.90200001001358032" blue="0.92199999094009399" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
-        <namedColor name="FAFAFC">
-            <color red="0.98000001907348633" green="0.98000001907348633" blue="0.98799997568130493" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <namedColor name="FFFFFF">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
