--- a/hollysome/Views/Schedule/TodoCell.xib
+++ b/hollysome/Views/Schedule/TodoCell.xib
@@ -20,7 +20,7 @@
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gbm-53-szB">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="1"/>
-                        <color key="backgroundColor" name="E4E6EB"/>
+                        <color key="backgroundColor" name="FFFFFF"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="1" id="CZ2-hl-ZMq"/>
                         </constraints>
@@ -75,8 +75,8 @@
         </tableViewCell>
     </objects>
     <resources>
-        <namedColor name="E4E6EB">
-            <color red="0.89399999380111694" green="0.90200001001358032" blue="0.92199999094009399" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <namedColor name="FFFFFF">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
